<resources>
    <string name="app_name">Awesome Shop</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="full_name">Full Name</string>
    <string name="awesome_shop">Awesome\nShop</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="welcome_user_name">Welcome, [User Name]</string>
    <string name="categories">Categories</string>
    <string name="products">Products</string>
    <string name="product_image">Product Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plus">+</string>
    <string name="minues">-</string>
    <string name="product_images">product_image</string>
    <string name="name">name</string>
    <string name="value">value</string>
    <string name="product_name">Product Name</string>
    <string name="order">Order</string>
    <string name="settings_icon">Settings Icon</string>
    <string name="back_button">Back Button</string>
    <string name="cart">Cart</string>
    <string name="log_out">Log Out</string>
    <string name="carts">Cart</string>
    <string name="logout">Logout</string>
    <string name="show_password">show password</string>
    <string name="passwordss">Password</string>
    <string name="visibile">visibile</string>
    <string name="app_logo">app logo</string>
    <string name="loading">loading...</string>
    <string name="loadings">Loading...</string>
    <string name="name_length_error">Full Name must contain at least three characters</string>
    <string name="user_length_error">Username must be at least 3 characters long</string>
    <string name="name_spacing_error">Full Name cannot contain only spaces</string>
    <string name="password_length_error">Password must be at least 6 characters long</string>
    <string name="name_digit_error">Full Name cannot contain numbers\n</string>
    <string name="login_failed_error">Please fill in all fields</string>
</resources>