<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".LoginFragment">

<!--    <ImageView-->
<!--        android:id="@+id/appLogo"-->
<!--        android:layout_width="100dp"-->
<!--        android:layout_height="100dp"-->
<!--        android:contentDescription="@string/app_logo"-->
<!--        android:src="@drawable/app_logo"-->
<!--        app:layout_constraintEnd_toEndOf="@id/pass_et"-->
<!--        app:layout_constraintStart_toStartOf="@id/pass_et"-->
<!--        app:layout_constraintTop_toTopOf="@id/pass_et" />-->


    <TextView
        android:id="@+id/tv_AppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/awesome_shop"
        android:layout_marginTop="100dp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/et_FullName"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="50dp"
        android:autofillHints="full_name"
        android:background="@android:drawable/edit_text"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_AppName" />


    <EditText
        android:id="@+id/et_Username"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:autofillHints="username"
        android:background="@android:drawable/edit_text"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_FullName" />


    <RelativeLayout
        android:id="@+id/pass_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Username">

        <EditText
            android:id="@+id/et_Password"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:autofillHints=""
            android:background="@android:drawable/edit_text"
            android:hint="@string/passwordss"
            android:inputType="textPassword" />

        <ImageView
            android:id="@+id/visibility_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/show_password"
            android:src="@drawable/baseline_visibility_24" />

        <ImageView
            android:id="@+id/visibility_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/visibile"
            android:src="@drawable/baseline_visibility_off_24" />
    </RelativeLayout>


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:background="@android:drawable/btn_default"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pass_et" />


</androidx.constraintlayout.widget.ConstraintLayout>
