<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    tools:context=".CartsAdapter">

  <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <TextView
            android:id="@+id/tvProductName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:id="@+id/product_price_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvProductName">

            <TextView
                android:id="@+id/tv_price_key"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp"
                tools:text="Price" />

            <TextView
                android:id="@+id/tv_price_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textAlignment="textEnd"
                tools:text="100tk" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/product_Quantity_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_price_layout">

            <TextView
                android:id="@+id/tv_quantity_key"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp"
                tools:text="Quantity" />

            <TextView
                android:id="@+id/tv_quantity_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textAlignment="textEnd"
                tools:text="2 qunty" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/product_total_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_Quantity_layout">

            <TextView
                android:id="@+id/tv_total_key"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp"
                tools:text="Total" />

            <TextView
                android:id="@+id/tv_total_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textAlignment="textEnd"
                tools:text="200tk" />
        </LinearLayout>




        <LinearLayout
            android:id="@+id/quantity_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/product_total_layout"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/btnDecrement"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="38sp"
                android:text="@string/minues"
                tools:text="@string/minues" />


            <TextView
                android:id="@+id/btnIncrement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textAlignment="textEnd"
                tools:text="@string/plus"
                android:text="@string/plus"
                android:textColor="@color/black"
                android:textSize="38sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>
